syntax = "proto3";

package logic;

option go_package = "github.com/2pgcn/gameim/api/logic;logic";
import "google/protobuf/empty.proto";
import "protocol/queue.proto";

service Logic {
  rpc OnAuth(AuthReq) returns (AuthReply) {}
  rpc OnConnect(ConnectReq) returns (google.protobuf.Empty) {}
  rpc OnMessage(stream MessageReq) returns (MessageReply) {}
  rpc OnClose(CloseReq) returns (google.protobuf.Empty) {}
}

message AuthReq {
  string token = 1;
}

message AuthReply {
  string appid = 1;
  string uid = 2;
  string room_id = 4;
}

message ConnectReq{
  string uid = 1;
}


message MessageReq{
  protocol.Type type = 1;
  string comet_key = 2;
  string to_id = 3;
  string send_id = 4;
  string msg_id = 5;
  bytes msg = 6;
}
message MessageReply{
  repeated MsgReply msgs = 1;
}

message MsgReply{
  string send_id = 1;
  string msg_id = 2;
}

message CloseReq{
  string uid = 1;
}
